# HoneyClean

./: .gitignore  HoneyClean.py  LICENSE  README.md  build_HoneyClean_exe.bat
core/: config.py  i18n.py  image_ops.py  processing.py  utils.py
honeyclean-v6/: .gitignore  README.md  index.html  package-lock.json  package.json
honeyclean-v6/src/: App.tsx  index.css
honeyclean-v6/src-tauri/: Cargo.toml  tauri.conf.json
honeyclean-v6/src-tauri/capabilities/: default.json
honeyclean-v6/src-tauri/python/: crash_mailer.py  gpu_diagnostics.py  honeyclean_worker.py
honeyclean-v6/src-tauri/src/: lib.rs  main.rs
honeyclean-v6/src/components/: EulaModal.tsx  FirstRunModal.tsx  GpuSetupModal.tsx  HoneyBackground.tsx  HoneyCursor.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
honeyclean-v6/src/components/ui/: Button.tsx  Select.tsx  Slider.tsx  Toggle.tsx  Tooltip.tsx
honeyclean-v6/src/hooks/: useGPU.ts  useI18n.ts  useWorker.ts
honeyclean-v6/src/lib/: errorCodes.ts  i18n.ts  presets.ts
honeyclean-v6/src/pages/: AboutPage.tsx  DiagnosticsPage.tsx  EditorPage.tsx  ModelsPage.tsx  QueuePage.tsx  SettingsPage.tsx
honeyclean-v6/src/store/: useStore.ts
ui/: about_page.py  editor_page.py  queue_page.py  settings_page.py  sidebar.py  splash.py  theme.py  widgets.py
